gccida/g1/lookup_filename
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12245:41: error: use of undeclared identifier 'a'
if ( strcmp( file_name, ( const char *)&a.dw_attr_val.val_class + 3) ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12249:21: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
last_lookup_index = file_table_0.last_lookup_index; 
                    ^~~~~~~~~~~~
                    file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12250:60: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !file_table_0.last_lookup_index || strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
                                                           ^~~~~~~~~~~~
                                                           file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12250:79: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !file_table_0.last_lookup_index || strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
                                                                              ^~~~~~~~~~~~
                                                                              file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12250:7: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !file_table_0.last_lookup_index || strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
      ^~~~~~~~~~~~
      file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12252:21: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
last_lookup_index = file_table_0.in_use; 
                    ^~~~~~~~~~~~
                    file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12253:24: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
v2 = ( const char **)( file_table_0.table + 1); 
                       ^~~~~~~~~~~~
                       file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12255:6: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( file_table_0.in_use <= 1 ) 
     ^~~~~~~~~~~~
     file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12259:6: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( file_table_0.allocated == last_lookup_index ) 
     ^~~~~~~~~~~~
     file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12261:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.allocated = last_lookup_index + 64; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12262:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table = ( char **)xrealloc( file_table_0.table, 8LL * ( last_lookup_index + 64)); 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12262:42: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table = ( char **)xrealloc( file_table_0.table, 8LL * ( last_lookup_index + 64)); 
                                         ^~~~~~~~~~~~
                                         file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12264:7: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
v4 = &file_table_0.table[last_lookup_index]; 
      ^~~~~~~~~~~~
      file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12266:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.in_use = last_lookup_index + 1; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12267:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.last_lookup_index = last_lookup_index; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12268:40: error: use of undeclared identifier 'a'
fprintf( asm_out_file, ( const char *)&a.dw_attr_val.v.val_unsigned + 6, last_lookup_index, file_name); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:12279:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.last_lookup_index = v3; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_filename/src/obj/dwarf2out.o] Error 1
